# boids

./: .clang-format  .gitignore  CMakeLists.txt
include/: boid.h  boids.h  scene.h  skin.h  world.h
src/: boid.cpp  boids.cpp  main.cpp  names.txt  scene.cpp  skin.cpp  world.cpp
